<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".activity.DiscountCalculatorActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/theme_color"
        android:padding="8dp">

        <TextView
            android:id="@+id/txtAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:text="@string/discount_calculator"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btnSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="4dp"
            android:src="@drawable/baseline_menu_white_24" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fifteen_dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/ten_dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/original_price"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtOriginalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="10"
                    android:padding="@dimen/ten_dp"
                    android:text="@string/_0"
                    android:textColor="@color/theme_color"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="wrap_content"
                    android:maxLength="10"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textColor="@color/theme_color"
                    android:textSize="18sp"
                    android:visibility="gone" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fifteen_dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/ten_dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/discount_off"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtDiscountPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/ten_dp"
                android:text="@string/_0"
                android:maxLength="3"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:visibility="gone" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fifteen_dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/ten_dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/final_price"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn"
                android:backgroundTint="@color/theme_color"
                android:padding="@dimen/ten_dp"
                android:text="@string/_0"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:text="@string/you_save_0"
                android:textColor="@color/colorBlack" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtYouSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:layout_marginStart="@dimen/five_dp"
                android:layout_marginTop="2dp"
                android:text="@string/_0"
                android:textColor="@color/theme_color" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt7"
                style="@style/TextCalculate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:gravity="center"
                android:text="@string/_7"
                android:textColor="@color/colorBlack" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt4"
                style="@style/TextCalculate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:gravity="center"
                android:text="@string/_4"
                android:textColor="@color/colorBlack" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt1"
                style="@style/TextCalculate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:gravity="center"
                android:text="@string/_1"
                android:textColor="@color/colorBlack" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextCalculate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:gravity="center"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt8"
                style="@style/TextCalculate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:gravity="center"
                android:text="@string/_8"
                android:textColor="@color/colorBlack" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt5"
                style="@style/TextCalculate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:gravity="center"
                android:text="@string/_5"
                android:textColor="@color/colorBlack" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt2"
                style="@style/TextCalculate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:gravity="center"
                android:text="@string/_2"
                android:textColor="@color/colorBlack" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt0"
                style="@style/TextCalculate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="@color/colorBlack" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt9"
                style="@style/TextCalculate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:gravity="center"
                android:text="@string/_9"
                android:textColor="@color/colorBlack" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt6"
                style="@style/TextCalculate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:gravity="center"
                android:text="@string/_6"
                android:textColor="@color/colorBlack" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt3"
                style="@style/TextCalculate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:gravity="center"
                android:text="@string/_3"
                android:textColor="@color/colorBlack" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtDot"
                style="@style/TextCalculate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:gravity="center"
                android:text="@string/dot"
                android:textColor="@color/colorBlack" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtAc"
                style="@style/TextCalculate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:gravity="center"
                android:text="@string/c"
                android:textColor="@color/theme_color" />

            <androidx.appcompat.widget.AppCompatTextView

                style="@style/TextCalculate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:gravity="center"
                android:text="@string/x"
                android:textColor="@color/colorBlack"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/txtX"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:backgroundTint="@color/theme_color">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/cut"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/close_icon" />

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtEqual"
                style="@style/TextCalculate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:gravity="center"
                android:text="@string/equal"
                android:textColor="@color/theme_color" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextCalculate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/ten_dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:visibility="invisible" />


        </LinearLayout>
    </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/llAdView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/llAdViewFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            android:visibility="visible" />

    </LinearLayout>


</LinearLayout>